# ia-whatsapp-crm

./: .gitignore  Dockerfile  README.md  curl_stderr.txt  error_ai.txt  error_all.txt  error_bg.txt  error_clean.txt  error_latest.txt  extract.py  extracted_logs.txt  implementation_plan.md  read_utf16_logs.py  run_logs.bat  schema.sql  task.md  test_gpt5_tools_feed.py  test_history.py  tmp_check_history.py
.ai-context/: BACKLOG.md  (+16 more)
Backend/: .env.prod  .gcloudignore  Dockerfile  calendar_service.py  check_contacts.py  check_contacts2.py  check_db.py  db_setup.py  debug_db.py  deploy_to_prod.sql  enable_rt.py  fix_pub_pooler.py  fix_rls.py  latency_analysis.md  llm_router.py  logger.py  main.py  migrate_contacts.py  pyproject.toml  reporter.py  requirements.txt  run_all_migrations.py  simulation_report.md  temp_fix_rls.sql  test_bot.py  test_gpt5.py  test_gpt5_tools.py  tmp_clean_db.py  triage_service.py  whatsapp_service.py
Backend/app/: main.py
Backend/app/api/: dependencies.py  resources_api.py  scheduling_config_api.py  services_api.py  staff_messaging.py
Backend/app/core/: config.py  event_bus.py  exceptions.py  models.py  proactive_worker.py  rate_limiter.py  security.py
Backend/deploy/: Dockerfile  docker-compose.yml
Backend/scripts/: audit_schema.py  migration_ddl.py  run_migration.py
Backend/scripts/maintenance/: delete_contacts.py  migrate_contacts.py
Backend/scripts/setup/: db_setup.py  enable_rt.py  fix_pub_pooler.py  fix_rls.py
Backend/scripts/simulation/: __init__.py  cleanup.py  payload_factory.py  runner.py  scenarios.py  switch_env.py
(+134 files in other folders)
